src/objects/Marketlink_Farmer_Association__c.object
<CustomObject>
    <fields>
        <fullName>Market_Link_Farmer__c</fullName>
        <label>Market Link Farmer</label>
        <referenceTo>Market_Link_Farmer__c</referenceTo>
        <relationshipLabel>Marketlink Farmer Associations</relationshipLabel>
        <relationshipName>Marketlink_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Link_Transaction__c</fullName>
        <label>Market Link Transaction</label>
        <referenceTo>Market_Link_Transaction__c</referenceTo>
        <relationshipLabel>Marketlink Farmer Associations</relationshipLabel>
        <relationshipName>Marketlink_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <description>Amount of produce in kilograms from this farmer</description>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketlink Farmer Association</label>
    <nameField>
        <label>Marketlink Farmer Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketlink Farmer Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>